--- a/q/275165.html
+++ b/q/275165.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>064</td><td>Python 3</td><td>240827T175843Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275191#275191">Jonathan</a></td></tr>
-<tr d-ix="1"><td>049</td><td>Ruby</td><td>240827T170409Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275190#275190">Jordan</a></td></tr>
+<tr d-ix="0"><td>049</td><td>Ruby</td><td>240827T170409Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275190#275190">Jordan</a></td></tr>
+<tr d-ix="1"><td>064</td><td>Python 3</td><td>240827T175843Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275191#275191">Jonathan</a></td></tr>
 <tr d-ix="2"><td>071</td><td>Python</td><td>240826T215815Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275172#275172">shape wa</a></td></tr>
 <tr d-ix="3"><td>006</td><td>05AB1E</td><td>240827T071746Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275183#275183">Kevin Cr</a></td></tr>
 <tr d-ix="4"><td>009</td><td>Japt</td><td>240827T064722Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275182#275182">Shaggy</a></td></tr>
@@ -40,7 +40,13 @@
 <tr d-ix="11"><td>018</td><td>Charcoal</td><td>240826T210607Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275168#275168">Neil</a></td></tr>
 <tr d-ix="12"><td>023</td><td>Jelly</td><td>240826T191846Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275166#275166">hyper-ne</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 64 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 49 bytes</h1>
+<p>Port of <a href="https://codegolf.stackexchange.com/a/275174/11261">Jonathan Allan's Jelly answer</a>; give him an upvote.</p>
+<pre class="lang-ruby prettyprint-override"><code>-&gt;a{(b=[*a.combination(2)].flatten).zip b.rotate}
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=m72kqDSpcsEiN9ulpSVpuhY3DXXtEqs1kmyjtRL1kvNzkzLzEksy8_M0jDRj9dJyEktKUvM09aoyCxSS9IrySxJLUmshGrcVKLhFRyslKukoJQFxMhCnKMXGQiQXLIDQAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 64 bytes</h1>
 <p>I started by looking at <a href="https://codegolf.stackexchange.com/users/123885/shape-warrior-t">shape warrior t</a>'s excellent <a href="https://codegolf.stackexchange.com/a/275172/53748">Python 3 answer</a> (go upvote!), but got to a slightly different solution in terms of both function and form, so went with a new post.</p>
 
 <pre class="lang-python prettyprint-override"><code>f=lambda h,*r:r and sum(((h,h,n,n)for n in r),r[-1:])[:-1]+f(*r)
@@ -64,12 +70,6 @@
                                                                  #       (i.e. h will be the
                                                                  #        first of the rest)
 </code></pre>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 49 bytes</h1>
-<p>Port of <a href="https://codegolf.stackexchange.com/a/275174/11261">Jonathan Allan's Jelly answer</a>; give it an upvote.</p>
-<pre class="lang-ruby prettyprint-override"><code>-&gt;a{(b=[*a.combination(2)].flatten).zip b.rotate}
-</code></pre>
-<p><a href="https://ato.pxeger.com/run?1=m72kqDSpcsEiN9ulpSVpuhY3DXXtEqs1kmyjtRL1kvNzkzLzEksy8_M0jDRj9dJyEktKUvM09aoyCxSS9IrySxJLUmshGrcVKLhFRyslKukoJQFxMhCnKMXGQiQXLIDQAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <s>88</s> <s>74</s> 71 bytes</h1>
 <pre class="lang-python prettyprint-override"><code>lambda L:sum([[a,a,b,b]for b in L for a in L[:L.index(b)]],L[-1:])[:-1]
