--- a/q/275165.html
+++ b/q/275165.html
@@ -26,33 +26,38 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>066</td><td>R</td><td>240827T191400Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275194#275194">David Jo</a></td></tr>
-<tr d-ix="1"><td>049</td><td>Ruby</td><td>240827T170409Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275190#275190">Jordan</a></td></tr>
-<tr d-ix="2"><td>064</td><td>Python 3</td><td>240827T175843Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275191#275191">Jonathan</a></td></tr>
-<tr d-ix="3"><td>071</td><td>Python</td><td>240826T215815Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275172#275172">shape wa</a></td></tr>
-<tr d-ix="4"><td>006</td><td>05AB1E</td><td>240827T071746Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275183#275183">Kevin Cr</a></td></tr>
-<tr d-ix="5"><td>009</td><td>Japt</td><td>240827T064722Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275182#275182">Shaggy</a></td></tr>
-<tr d-ix="6"><td>026</td><td>Retina</td><td>240827T104206Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275186#275186">Neil</a></td></tr>
-<tr d-ix="7"><td>1087</td><td>Jelly</td><td>240827T001136Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275174#275174">Jonathan</a></td></tr>
-<tr d-ix="8"><td>154</td><td>Google Sheets</td><td>240826T231658Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275173#275173">doubleun</a></td></tr>
-<tr d-ix="9"><td>067</td><td>or</td><td>240827T011728Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275176#275176">l4m2</a></td></tr>
-<tr d-ix="10"><td>069</td><td>JavaScript ES6</td><td>240826T210254Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275167#275167">Arnauld</a></td></tr>
-<tr d-ix="11"><td>009</td><td>Vyxal</td><td>240826T212519Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275169#275169">emanresu</a></td></tr>
-<tr d-ix="12"><td>018</td><td>Charcoal</td><td>240826T210607Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275168#275168">Neil</a></td></tr>
-<tr d-ix="13"><td>023</td><td>Jelly</td><td>240826T191846Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275166#275166">hyper-ne</a></td></tr>
+<tr d-ix="0"><td>nan</td><td></td><td>240827T202232Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275196#275196">chatwith</a></td></tr>
+<tr d-ix="1"><td>066</td><td>R</td><td>240827T191400Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275194#275194">David Jo</a></td></tr>
+<tr d-ix="2"><td>049</td><td>Ruby</td><td>240827T170409Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275190#275190">Jordan</a></td></tr>
+<tr d-ix="3"><td>064</td><td>Python 3</td><td>240827T175843Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275191#275191">Jonathan</a></td></tr>
+<tr d-ix="4"><td>071</td><td>Python</td><td>240826T215815Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275172#275172">shape wa</a></td></tr>
+<tr d-ix="5"><td>006</td><td>05AB1E</td><td>240827T071746Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275183#275183">Kevin Cr</a></td></tr>
+<tr d-ix="6"><td>009</td><td>Japt</td><td>240827T064722Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275182#275182">Shaggy</a></td></tr>
+<tr d-ix="7"><td>026</td><td>Retina</td><td>240827T104206Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275186#275186">Neil</a></td></tr>
+<tr d-ix="8"><td>1087</td><td>Jelly</td><td>240827T001136Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275174#275174">Jonathan</a></td></tr>
+<tr d-ix="9"><td>154</td><td>Google Sheets</td><td>240826T231658Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275173#275173">doubleun</a></td></tr>
+<tr d-ix="10"><td>067</td><td>or</td><td>240827T011728Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275176#275176">l4m2</a></td></tr>
+<tr d-ix="11"><td>069</td><td>JavaScript ES6</td><td>240826T210254Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275167#275167">Arnauld</a></td></tr>
+<tr d-ix="12"><td>009</td><td>Vyxal</td><td>240826T212519Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275169#275169">emanresu</a></td></tr>
+<tr d-ix="13"><td>018</td><td>Charcoal</td><td>240826T210607Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275168#275168">Neil</a></td></tr>
+<tr d-ix="14"><td>023</td><td>Jelly</td><td>240826T191846Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275166#275166">hyper-ne</a></td></tr>
 </table>
-<div id="pu0" class="pu"><p>R, 66 bytes</p>
+<div id="pu0" class="pu"><p>Wireclub - Chat Sites Alternates by TalkWithStranger</p>
+<p><a href="https://talkwithstranger.com/chatsites/wireclub" rel="nofollow noreferrer">https://talkwithstranger.com/chatsites/wireclub</a></p>
+<p>Wireclub.com offers its users free chat online within small communities. The Wireclub login welcomes new users to their chat rooms and connects them other online users in specific chat rooms. They have huge user base who visit wireclub on a regular basis.</p>
+</div>
+<div id="pu1" class="pu"><p>R, 66 bytes</p>
 <p>This accepts a character vector of names <code>x</code> that needs to be specified beforehand:</p>
 <pre><code>for(i in 1:ncol(combn(x,2)))print(combinat::permn(combn(x,2)[,i]))
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 49 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 49 bytes</h1>
 <p>Port of <a href="https://codegolf.stackexchange.com/a/275174/11261">Jonathan Allan's Jelly answer</a>; give him an upvote.</p>
 <pre class="lang-ruby prettyprint-override"><code>-&gt;a{(b=[*a.combination(2)].flatten).zip b.rotate}
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m72kqDSpcsEiN9ulpSVpuhY3DXXtEqs1kmyjtRL1kvNzkzLzEksy8_M0jDRj9dJyEktKUvM09aoyCxSS9IrySxJLUmshGrcVKLhFRyslKukoJQFxMhCnKMXGQiQXLIDQAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 64 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 64 bytes</h1>
 <p>I started by looking at <a href="https://codegolf.stackexchange.com/users/123885/shape-warrior-t">shape warrior t</a>'s excellent <a href="https://codegolf.stackexchange.com/a/275172/53748">Python 3 answer</a> (go upvote!), but got to a slightly different solution in terms of both function and form, so went with a new post.</p>
 
 <pre class="lang-python prettyprint-override"><code>f=lambda h,*r:r and sum(((h,h,n,n)for n in r),r[-1:])[:-1]+f(*r)
@@ -77,7 +82,7 @@
                                                                  #        first of the rest)
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <s>88</s> <s>74</s> 71 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <s>88</s> <s>74</s> 71 bytes</h1>
 <pre class="lang-python prettyprint-override"><code>lambda L:sum([[a,a,b,b]for b in L for a in L[:L.index(b)]],L[-1:])[:-1]
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m72soLIkIz9vweI025ilpSVpuhY33XMSc5NSEhV8rIpLczWioxN1EnWSdJJi0_KLFJIUMvMUfBRAzEQwM9rKRy8zLyW1QiNJMzZWxyda19AqVjPaStcwFmLcvoKizLwSjTSNaPVEdR0F9SQQkQwiUtRjNTUhihYsgNAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -107,7 +112,7 @@ def f(L):
 <p>In the actual code, we take the first list of two-element combinations, double both vertices in each combination, and then flatten and rotate the entire thing. For vertices A, B, C, D, the golfed code calculates <code>rotate_right(flatten([AABB, AACC, ..., CCDD]))</code> as<br />
 <code>all_but_last(D + AABB + AACC + ... + CCDD)</code>.</p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>7</s> 6 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu5" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>7</s> 6 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>.Æ˜DÀø
 </code></pre>
 <p>Port of <a href="https://codegolf.stackexchange.com/a/275174/52210"><em>@JonathanAllan</em>'s Jelly answer</a>, so make sure to upvote that answer as well!<br />
@@ -129,13 +134,13 @@ def f(L):
         # (after which the result is output implicitly)
 </code></pre>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, <s>11</s> 9 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu6" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, <s>11</s> 9 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>à2 c
 íUéJ
 </code></pre>
 <p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;code=4DIgYwrtVelK&amp;input=WzAgMSAyIDNdCi1R" rel="nofollow noreferrer">Try it</a></p>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language" rel="nofollow noreferrer">Retina</a>, 26 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language" rel="nofollow noreferrer">Retina</a>, 26 bytes</h1>
 <pre><code>w`(.).*(.)
 $1$1$2$2
 V`.+\B
@@ -155,7 +160,7 @@ $1$1$2$2
 $2$1
 </code></pre>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <S> 10 8 </s> 7 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu8" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <S> 10 8 </s> 7 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>ŒcẎṙ-żƊ
 </code></pre>
 <p>A monadic Link that accepts a list of names (lists of characters) and yields a list of pairs of names.</p>
@@ -171,7 +176,7 @@ $2$1
      ż  -   zip with {X}        -&gt; [[Z,a],[a,b],[b,a],[a,c],...,[a,Z],[Z,b],[b,c],...,[X,Y]]
 </code></pre>
 </div>
-<div id="pu8" class="pu"><h1>Google Sheets, 154 bytes</h1>
+<div id="pu9" class="pu"><h1>Google Sheets, 154 bytes</h1>
 <pre><code>=let(s,&quot; &quot;,f,lambda(f,a,let(n,counta(a)-1,h,+a,t,choosecols(a,sequence(n,1,2)),if(n,join(s,sort(h&amp;s&amp;h&amp;s&amp;t&amp;s&amp;t),f(f,t)),))),mid(f(f,1:1),2+len(A1),9^9)&amp;A1)
 </code></pre>
 <p>Put the names in row <code>1</code> and the formula in cell <code>A2</code>.</p>
@@ -208,7 +213,7 @@ g = A =&gt; f(A).slice(A[0].length + 1) + A[0]
 console.log(g([&quot;Alice&quot;,&quot;Bob&quot;,&quot;Cole&quot;,&quot;Dave&quot;])) // &quot;Alice,Bob,Bob,Alice,Alice,Cole,Cole,Alice,Alice,Dave,Dave,Bob,Bob,Cole,Cole,Bob,Bob,Dave,Dave,Cole,Cole,Dave,Dave,Alice&quot;
 </code></pre>
 </div>
-<div id="pu9" class="pu"><p><a href="https://tio.run/##y0osSyxOLsosKNHNy09J/f8/zVYjOlEnSUdPT68iVqdS09YuyR4mUFlTk6YRDZXTBIolgphpIA0Q5dGxmrFWFf@T8/OK83NS9XLy0zWAskqOOZnJqUo6Sk75SUAyJD9XKVZTkwtDFUgFEDsDsQsQu4JU/QcA" rel="nofollow noreferrer">or 67 bytes flatten</a></p>
+<div id="pu10" class="pu"><p><a href="https://tio.run/##y0osSyxOLsosKNHNy09J/f8/zVYjOlEnSUdPT68iVqdS09YuyR4mUFlTk6YRDZXTBIolgphpIA0Q5dGxmrFWFf@T8/OK83NS9XLy0zWAskqOOZnJqUo6Sk75SUAyJD9XKVZTkwtDFUgFEDsDsQsQu4JU/QcA" rel="nofollow noreferrer">or 67 bytes flatten</a></p>
 <h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 71 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>f=([a,b,...x],y)=&gt;b?[[a,b],...y||f([b,...x]),[b,a],...f([a,...x],[])]:x
@@ -221,7 +226,7 @@ console.log(g([&quot;Alice&quot;,&quot;Bob&quot;,&quot;Cole&quot;,&quot;Dave&quo
 <li>A-&gt;C-&gt;A, A-&gt;D-&gt;A, ...</li>
 </ul>
 </div>
-<div id="pu10" class="pu"><h1>JavaScript (ES6), 69 bytes</h1>
+<div id="pu11" class="pu"><h1>JavaScript (ES6), 69 bytes</h1>
 <p>Expects an array of strings and returns a flat list as a comma-separated string.</p>
 
 <pre class="lang-javascript prettyprint-override"><code>f=([v,...a],b=v)=&gt;a.map((p,i)=&gt;[v,p,p,a[i+1]?v:i?[a[0],f(a,b)]:b])+&quot;&quot;
@@ -265,7 +270,7 @@ a.map((p, i) =&gt;   // for each element p at index i in a[]:
 + &quot;&quot;              // coerce to a string
 </code></pre>
 </div>
-<div id="pu11" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="noreferrer">Vyxal</a>, 9 bytes</h1>
+<div id="pu12" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="noreferrer">Vyxal</a>, 9 bytes</h1>
 <pre><code>KƛZṫwẊ;fǓ
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyIiLCIiLCJLxpta4bmrd+G6ijtmx5MiLCIiLCJbXCJhXCIsXCJiXCIsXCJjXCIsXCJkXCIsXCJlXCJdIl0=" rel="noreferrer">Try it Online!</a>
@@ -290,7 +295,7 @@ Port of Neil's Charcoal answer.</p>
           ∩≈   # Has all elements equal?
 </code></pre>
 </div>
-<div id="pu12" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 18 bytes</h1>
+<div id="pu13" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 18 bytes</h1>
 <pre><code>Φ⭆θ⭆…θκ⁺×²λ×²ικ§θ⁰
 </code></pre>
 <p><a href="https://tio.run/##S85ILErOT8z5/z@gKDOvRMMtM6cktUgjuATIS/dNLNAo1FFAcJwrk3NSnTPywcLZmjoKATmlxRohmbmpxRpGOgo5QBE4J1MTCECqNK25IGY7lnjmpaRWgPQaAEX//09MSk5J/a9blgMA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation: <a href="https://oeis.org/A097285" rel="nofollow noreferrer">A097285</a> is almost the sequence of indices, with each element doubled, except that there is only one of the first element at the start, the second coming at the end.</p>
@@ -308,7 +313,7 @@ Port of Neil's Charcoal answer.</p>
 Φ             κ§θ⁰  Remove the first element and append it to the end
 </code></pre>
 </div>
-<div id="pu13" class="pu"><h1><a href="https://github.com/DennisMitchell/jellylanguage" rel="nofollow noreferrer">Jelly</a>, 23 bytes</h1>
+<div id="pu14" class="pu"><h1><a href="https://github.com/DennisMitchell/jellylanguage" rel="nofollow noreferrer">Jelly</a>, 23 bytes</h1>
 <pre><code>2œṖ$ÐƤṖUp/€żUẎṖƲ€Ẏ;Uṡ2Ɗ
 </code></pre>
 <p><a href="https://jht.hyper-neutrino.xyz/tio#WyIiLCIyxZPhuZYkw5DGpOG5llVwL+KCrMW8VeG6juG5lsay4oKs4bqOO1XhuaEyxooiLCLDh8WS4bmYIiwiIixbIlwiYWJjZFwiIl1d" rel="nofollow noreferrer">Try It Online!</a></p>
