--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240827T202232Z
+"   /golfscore                                      20240827T204936Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/90131.html">Calculate the difficulty of a Code Golf question: 0090131</a>
 <a href="q/275165.html">Completely introduce your friends               : 0275165</a>
 <a href="q/75409.html">Minimum Scalar Product                          : 0075409</a>
 <a href="q/224278.html">Count the trailing zeros                        : 0224278</a>
