--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240828T054551Z
+"   /golfscore                                      20240828T063617Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/103761.html">bROKEN cAPSLOCK kEY fIASCO                      : 0103761</a>
 <a href="q/30344.html">Testing Keyboards                               : 0030344</a>
 <a href="q/75409.html">Minimum Scalar Product                          : 0075409</a>
 <a href="q/275165.html">Completely introduce your friends               : 0275165</a>
