--- a/q/103761.html
+++ b/q/103761.html
@@ -26,41 +26,58 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>062</td><td>Perl 5 F</td><td>240327T152001Z</td><td><a href="https://codegolf.stackexchange.com/questions/103761/broken-capslock-key-fiasco/272142#272142">Xcali</a></td></tr>
-<tr d-ix="1"><td>nan</td><td>Ruby</td><td>161220T054754Z</td><td><a href="https://codegolf.stackexchange.com/questions/103761/broken-capslock-key-fiasco/103821#103821">Value In</a></td></tr>
-<tr d-ix="2"><td>100</td><td>Python</td><td>170101T205135Z</td><td><a href="https://codegolf.stackexchange.com/questions/103761/broken-capslock-key-fiasco/105296#105296">Cormac</a></td></tr>
-<tr d-ix="3"><td>093</td><td>JavaScript</td><td>161220T215056Z</td><td><a href="https://codegolf.stackexchange.com/questions/103761/broken-capslock-key-fiasco/103983#103983">Washingt</a></td></tr>
-<tr d-ix="4"><td>197</td><td>C#</td><td>161222T210253Z</td><td><a href="https://codegolf.stackexchange.com/questions/103761/broken-capslock-key-fiasco/104234#104234">Erresen</a></td></tr>
-<tr d-ix="5"><td>207</td><td>Haskell</td><td>161220T213749Z</td><td><a href="https://codegolf.stackexchange.com/questions/103761/broken-capslock-key-fiasco/103978#103978">archaeph</a></td></tr>
-<tr d-ix="6"><td>016</td><td>05AB1E</td><td>161219T234453Z</td><td><a href="https://codegolf.stackexchange.com/questions/103761/broken-capslock-key-fiasco/103781#103781">Adnan</a></td></tr>
-<tr d-ix="7"><td>200</td><td>Java 7</td><td>161220T154556Z</td><td><a href="https://codegolf.stackexchange.com/questions/103761/broken-capslock-key-fiasco/103922#103922">Kevin Cr</a></td></tr>
-<tr d-ix="8"><td>239</td><td>C#</td><td>161220T131031Z</td><td><a href="https://codegolf.stackexchange.com/questions/103761/broken-capslock-key-fiasco/103893#103893">satibel</a></td></tr>
-<tr d-ix="9"><td>nan</td><td></td><td>161220T053118Z</td><td><a href="https://codegolf.stackexchange.com/questions/103761/broken-capslock-key-fiasco/103820#103820">Brad Gil</a></td></tr>
-<tr d-ix="10"><td>084</td><td>Perl 6</td><td>161220T005844Z</td><td><a href="https://codegolf.stackexchange.com/questions/103761/broken-capslock-key-fiasco/103791#103791">smls</a></td></tr>
-<tr d-ix="11"><td>102</td><td>PHP</td><td>161219T235204Z</td><td><a href="https://codegolf.stackexchange.com/questions/103761/broken-capslock-key-fiasco/103782#103782">Titus</a></td></tr>
-<tr d-ix="12"><td>025</td><td>Pyke</td><td>161220T000626Z</td><td><a href="https://codegolf.stackexchange.com/questions/103761/broken-capslock-key-fiasco/103785#103785">Blue</a></td></tr>
-<tr d-ix="13"><td>030</td><td>MATL</td><td>161219T231453Z</td><td><a href="https://codegolf.stackexchange.com/questions/103761/broken-capslock-key-fiasco/103774#103774">Luis Men</a></td></tr>
-<tr d-ix="14"><td>036</td><td>V</td><td>161219T230738Z</td><td><a href="https://codegolf.stackexchange.com/questions/103761/broken-capslock-key-fiasco/103770#103770">DJMcMayh</a></td></tr>
+<tr d-ix="0"><td>014</td><td>Vyxal</td><td>240828T063617Z</td><td><a href="https://codegolf.stackexchange.com/questions/103761/broken-capslock-key-fiasco/275201#275201">emanresu</a></td></tr>
+<tr d-ix="1"><td>062</td><td>Perl 5 F</td><td>240327T152001Z</td><td><a href="https://codegolf.stackexchange.com/questions/103761/broken-capslock-key-fiasco/272142#272142">Xcali</a></td></tr>
+<tr d-ix="2"><td>nan</td><td>Ruby</td><td>161220T054754Z</td><td><a href="https://codegolf.stackexchange.com/questions/103761/broken-capslock-key-fiasco/103821#103821">Value In</a></td></tr>
+<tr d-ix="3"><td>100</td><td>Python</td><td>170101T205135Z</td><td><a href="https://codegolf.stackexchange.com/questions/103761/broken-capslock-key-fiasco/105296#105296">Cormac</a></td></tr>
+<tr d-ix="4"><td>093</td><td>JavaScript</td><td>161220T215056Z</td><td><a href="https://codegolf.stackexchange.com/questions/103761/broken-capslock-key-fiasco/103983#103983">Washingt</a></td></tr>
+<tr d-ix="5"><td>197</td><td>C#</td><td>161222T210253Z</td><td><a href="https://codegolf.stackexchange.com/questions/103761/broken-capslock-key-fiasco/104234#104234">Erresen</a></td></tr>
+<tr d-ix="6"><td>207</td><td>Haskell</td><td>161220T213749Z</td><td><a href="https://codegolf.stackexchange.com/questions/103761/broken-capslock-key-fiasco/103978#103978">archaeph</a></td></tr>
+<tr d-ix="7"><td>016</td><td>05AB1E</td><td>161219T234453Z</td><td><a href="https://codegolf.stackexchange.com/questions/103761/broken-capslock-key-fiasco/103781#103781">Adnan</a></td></tr>
+<tr d-ix="8"><td>200</td><td>Java 7</td><td>161220T154556Z</td><td><a href="https://codegolf.stackexchange.com/questions/103761/broken-capslock-key-fiasco/103922#103922">Kevin Cr</a></td></tr>
+<tr d-ix="9"><td>239</td><td>C#</td><td>161220T131031Z</td><td><a href="https://codegolf.stackexchange.com/questions/103761/broken-capslock-key-fiasco/103893#103893">satibel</a></td></tr>
+<tr d-ix="10"><td>nan</td><td></td><td>161220T053118Z</td><td><a href="https://codegolf.stackexchange.com/questions/103761/broken-capslock-key-fiasco/103820#103820">Brad Gil</a></td></tr>
+<tr d-ix="11"><td>084</td><td>Perl 6</td><td>161220T005844Z</td><td><a href="https://codegolf.stackexchange.com/questions/103761/broken-capslock-key-fiasco/103791#103791">smls</a></td></tr>
+<tr d-ix="12"><td>102</td><td>PHP</td><td>161219T235204Z</td><td><a href="https://codegolf.stackexchange.com/questions/103761/broken-capslock-key-fiasco/103782#103782">Titus</a></td></tr>
+<tr d-ix="13"><td>025</td><td>Pyke</td><td>161220T000626Z</td><td><a href="https://codegolf.stackexchange.com/questions/103761/broken-capslock-key-fiasco/103785#103785">Blue</a></td></tr>
+<tr d-ix="14"><td>030</td><td>MATL</td><td>161219T231453Z</td><td><a href="https://codegolf.stackexchange.com/questions/103761/broken-capslock-key-fiasco/103774#103774">Luis Men</a></td></tr>
+<tr d-ix="15"><td>036</td><td>V</td><td>161219T230738Z</td><td><a href="https://codegolf.stackexchange.com/questions/103761/broken-capslock-key-fiasco/103770#103770">DJMcMayh</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a> <code>-F</code>, 62 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 14 bytes</h1>
+<pre><code>‛ß₌£Nƛ⇩¥h=[N&amp;Ǔ
+</code></pre>
+<p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyJzIiwiIiwi4oCbw5/igozCo07Gm+KHqcKlaD1bTibHkyIsIiIsIkMgaXMgdGhlIGZpcnN0IGxldHRlciBpbiBjSFJJU1RNQVMiXQ==" rel="nofollow noreferrer">Try it Online!</a> Outputs as a char list, <code>s</code> flag formats into string.</p>
+<pre><code>   £           # Store into the register
+‛ß₌            # compressed string &quot;christmas&quot;
+    N          # Swap case of each letter
+     ƛ         # Over each letter
+          [    # If
+      ⇩        # The letter, lowercased
+         =     # equals
+       ¥h      # The first char of the register
+           N   # Switch the case again
+            &amp;Ǔ # And shift the first char of the register to the end
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a> <code>-F</code>, 62 bytes</h1>
 
 <pre class="lang-perl prettyprint-override"><code>say map{(christmas=~/./g)[$i%9]ne lc?/[a-z]/?uc:lc:++$i&amp;&amp;$_}@F
 </code></pre>
 <p><a href="https://tio.run/##BcFBC4IwFADgv/IOSwqZs4OHhLAIpA5esptIjLHywZyy9zpU1E9vfd9sgytiJP2EUc/vpRkCEo@atl@VqfuqE7jY9N6CM5XqtHz1qnqY0pkyTQUmibh@dnWMB0ACHizcMBCDs8w2AHowx/OpvTT79jfNjJOnKJsiy9d5lPUf" rel="nofollow noreferrer" title="Perl 5 – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu1" class="pu"><h1>Ruby, 63+1 = 64 bytes</h1>
+<div id="pu2" class="pu"><h1>Ruby, 63+1 = 64 bytes</h1>
 <p>Uses the <code>-p</code> flag.</p>
 <pre><code>i=0;gsub(/./){|c|c=~/#{&quot;christmas&quot;[i%9]}/i?(i+=1;c):c.swapcase}
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1>Python 100 bytes</h1>
+<div id="pu3" class="pu"><h1>Python 100 bytes</h1>
 
 <pre><code>def a(s,i=0,g=''):
  for c in s:a=c.lower()=='christmas'[i%9];i+=a;g+=[c.swapcase(),c][a]
  return g
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1>JavaScript, <s>122</s> <s>118</s> <s>114</s> <s>107</s> <s>104</s> 93 bytes</h1>
+<div id="pu4" class="pu"><h1>JavaScript, <s>122</s> <s>118</s> <s>114</s> <s>107</s> <s>104</s> 93 bytes</h1>
 
 <p><div class="snippet" data-lang="js" data-hide="false" data-console="true" data-babel="false">
 <div class="snippet-code">
@@ -83,7 +100,7 @@ F(`C is the first letter in cHRISTMAS`)</code></pre>
 <li>11 bytes off thanks @Neil.</li>
 </ul>
 </div>
-<div id="pu4" class="pu"><h1>C# 197 bytes</h1>
+<div id="pu5" class="pu"><h1>C# 197 bytes</h1>
 <p>Not going to win with this, but hopefully the smallest C# implementation that works...</p>
 <pre class="lang-c# prettyprint-override"><code>string C(string s){int i=0,j=0;var r=&quot;&quot;;for(;i&lt;s.Length;){char c=s[i++],o=(char)32;if(c==&quot;christmas&quot;[j]|c==&quot;CHRISTMAS&quot;[j])j=j&gt;7?0:j+1;else if(c&gt;64&amp;c&lt;91)c+=o;else if(c&gt;96&amp;c&lt;123)c-=o;r+=c;}return r;}
 </code></pre>
@@ -129,7 +146,7 @@ F(`C is the first letter in cHRISTMAS`)</code></pre>
 }
 </code></pre>
 </div>
-<div id="pu5" class="pu"><h1>Haskell, <s>222</s> 207 Bytes</h1>
+<div id="pu6" class="pu"><h1>Haskell, <s>222</s> 207 Bytes</h1>
 
 <pre><code>import Data.Char
 s=(+(-65)).ord
@@ -195,7 +212,7 @@ main=interact$k$cycle$map s"CHRISTMAS"
   <p>IO</p>
 </blockquote>
 </div>
-<div id="pu6" class="pu"><h1><a href="http://github.com/Adriandmen/05AB1E" rel="nofollow noreferrer">05AB1E</a>, 16 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="http://github.com/Adriandmen/05AB1E" rel="nofollow noreferrer">05AB1E</a>, 16 bytes</h1>
 
 <p>Thanks to <em>Emigna</em> for saving a byte and fixing a bug!</p>
 
@@ -219,7 +236,7 @@ main=interact$k$cycle$map s"CHRISTMAS"
 
 <p>Uses the <strong>CP-1252</strong> encoding. <a href="http://05ab1e.tryitonline.net/#code=dnnDkGwnxZLDjsK-w6hRacK8w6vFoX0_&amp;input=IiIiaSBDQU4gSEFSRExZIFdPUksgTElLRSBUSElTIApwbGVhc2UgR0VUIE1FIEEgTkVXIEtFWUJPQVJEIEZPUiBjSFJJU1RNQVMiIiI" rel="nofollow noreferrer">Try it online!</a></p>
 </div>
-<div id="pu7" class="pu"><h1>Java 7, 200 bytes</h1>
+<div id="pu8" class="pu"><h1>Java 7, 200 bytes</h1>
 <pre><code>String c(char[]a){String r=&quot;&quot;;int i=0,s;Character l='a';for(char c:a)if((s=&quot;christma&quot;.indexOf(l=l.toLowerCase(c)))==i|i&gt;7&amp;s==4){r+=c;i=i&gt;7?0:i+1;}else r+=l.isUpperCase(c)?l:l.toUpperCase(c);return r;}
 </code></pre>
 <p>Ugly, but it works.. Can definitely without any doubt be golfed more.. I'm rusty..</p>
@@ -269,7 +286,7 @@ cHRISTMAS is Coming really soon!
 C IS ThE FIrST LETTER iN ChriSTMAS
 </code></pre>
 </div>
-<div id="pu8" class="pu"><h2>C# 239 chars</h2>
+<div id="pu9" class="pu"><h2>C# 239 chars</h2>
 
 <pre><code>var s=Console.ReadLine().ToCharArray();int j=0,i=0;var c="christmas";for(;j&lt;s.Length;j++)if(s[j]==c[i%9]|s[j]==(c[i%9]-32))i++;else if(s[j]&gt;64&amp;s[j]&lt;91)s[j]=(char)(s[j]+32);else if(s[j]&gt;96&amp;s[j]&lt;123)s[j]=(char)(s[j]-32);Console.WriteLine(s);
 </code></pre>
@@ -297,7 +314,7 @@ Console.WriteLine(s);
 
 <p>edit: Char.IsUpper(s[j]) is 2 bytes longer than s[j]>64&amp;&amp;s[j]&lt;91,  Char.ToUpper is longer than my version too.</p>
 </div>
-<div id="pu9" class="pu">
+<div id="pu10" class="pu">
 <h1><a href="https://perl6.org" rel="nofollow noreferrer">Perl 6</a>, 80 bytes</h1>
 <pre class="lang-perl6 prettyprint-override"><code>{my$i=0;S:g{.?&lt;!{'christmas'.comb[$i%9]eq$/.lc&amp;&amp;++$i}&gt;}=$/eq$/.lc??$/.uc!!$/.lc}
 </code></pre>
@@ -331,12 +348,12 @@ Console.WriteLine(s);
 }
 </code></pre>
 </div>
-<div id="pu10" class="pu"><h1><a href="http://perl6.org/" rel="nofollow noreferrer">Perl 6</a>, 84 bytes</h1>
+<div id="pu11" class="pu"><h1><a href="http://perl6.org/" rel="nofollow noreferrer">Perl 6</a>, 84 bytes</h1>
 
 <pre><code>{my $i=0;[~] (.lc~~"christmas".comb[$i%9]??(++$i&amp;&amp;$_)!!.ord&gt;90??.uc!!.lc for .comb)}
 </code></pre>
 </div>
-<div id="pu11" class="pu"><h1>PHP, <s>113</s> <s>110</s> 102 bytes</h1>
+<div id="pu12" class="pu"><h1>PHP, <s>113</s> <s>110</s> 102 bytes</h1>
 
 <pre class="lang-php prettyprint-override"><code>while($o=ord($c=$argv[1][$i++]))echo chr(32|$o==ord(christmas[$k%9])?$o|0&amp;$k++:ctype_alpha($c)*32^$o);
 </code></pre>
@@ -355,12 +372,12 @@ Console.WriteLine(s);
         );
 </code></pre>
 </div>
-<div id="pu12" class="pu"><h2>Pyke, <s>31</s> 25 bytes</h2>
+<div id="pu13" class="pu"><h2>Pyke, <s>31</s> 25 bytes</h2>
 <pre><code>FD.dґ~o@Dl3+{DIoK)R!Il3
 </code></pre>
 <p><a href="http://pyke.catbus.co.uk/?code=FD.d%01%D2%91%7Eo%40Dl3%2B%7BDIoK%29R%21Il3&amp;input=cHRISTMAS+IS+COMING+REALLY+SOON" rel="nofollow noreferrer">Try it here!</a></p>
 </div>
-<div id="pu13" class="pu"><h1><a href="https://github.com/lmendo/MATL" rel="nofollow noreferrer">MATL</a>, <s>36</s> 30 bytes</h1>
+<div id="pu14" class="pu"><h1><a href="https://github.com/lmendo/MATL" rel="nofollow noreferrer">MATL</a>, <s>36</s> 30 bytes</h1>
 <pre><code>&quot;@tk'schristma'H)=?HQXHx}Yo]&amp;h
 </code></pre>
 <p>Strings with newlines need to be defined by concatenating with the ASCII code <code>10</code> (see example in the link with the test cases).</p>
@@ -388,7 +405,7 @@ Console.WriteLine(s);
           
 </code></pre>
 </div>
-<div id="pu14" class="pu"><h1><a href="https://github.com/DJMcMayhem/V" rel="nofollow noreferrer">V</a>, <s>38</s>, 36 bytes</h1>
+<div id="pu15" class="pu"><h1><a href="https://github.com/DJMcMayhem/V" rel="nofollow noreferrer">V</a>, <s>38</s>, 36 bytes</h1>
 
 <pre><code>ÄVumaOchristmas&#27;òÉf2x`a@"maj~HòHdjV~
 </code></pre>
