--- a/q/230438.html
+++ b/q/230438.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>035</td><td>Vyxal sḢ</td><td>220317T085648Z</td><td><a href="https://codegolf.stackexchange.com/questions/230438/create-a-pride-flag/244252#244252">emanresu</a></td></tr>
+<tr d-ix="0"><td>031</td><td>Vyxal sḢ</td><td>220317T085648Z</td><td><a href="https://codegolf.stackexchange.com/questions/230438/create-a-pride-flag/244252#244252">emanresu</a></td></tr>
 <tr d-ix="1"><td>138</td><td>Setanta</td><td>240719T194004Z</td><td><a href="https://codegolf.stackexchange.com/questions/230438/create-a-pride-flag/274268#274268">bb94</a></td></tr>
 <tr d-ix="2"><td>089</td><td>Typst</td><td>240719T072035Z</td><td><a href="https://codegolf.stackexchange.com/questions/230438/create-a-pride-flag/274259#274259">bb94</a></td></tr>
 <tr d-ix="3"><td>088</td><td>JavaScript Node.js</td><td>240718T234140Z</td><td><a href="https://codegolf.stackexchange.com/questions/230438/create-a-pride-flag/274252#274252">Andrew B</a></td></tr>
@@ -73,17 +73,17 @@
 <tr d-ix="44"><td>245</td><td>HTML</td><td>210626T161502Z</td><td><a href="https://codegolf.stackexchange.com/questions/230438/create-a-pride-flag/230557#230557">user</a></td></tr>
 <tr d-ix="45"><td>164</td><td>TikZ</td><td>210626T160602Z</td><td><a href="https://codegolf.stackexchange.com/questions/230438/create-a-pride-flag/230556#230556">Wheat Wi</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a> <code>sḢ</code>, 35 bytes</h1>
-<pre><code>»‡Ė\Tµi»H2ẇƛ`&lt;p «⟇=øḢ-÷¥:#Π7;₃ṁ:0&gt;.
+<div id="pu0" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a> <code>sḢ</code>, 31 bytes</h1>
+<pre><code>»‡Ė\Tµi»H2ẇƛ`&lt;¦₴ «⟇=øḢ-÷¥:#Π7&gt;.
 </code></pre>
-<p><a href="https://vyxal.pythonanywhere.com/#WyJz4biiIiwiIiwiwrvigKHEllxcVMK1acK7SDLhuofGm2A8cCDCq+Kfhz3DuOG4oi3Dt8KlOiPOoDc74oKD4bmBOjA+LiIsIiIsIiJd" rel="nofollow noreferrer">Try it Online!</a></p>
+<p><a href="https://vyxal.pythonanywhere.com/#WyJz4biiIiwiIiwiwrvigKHEllxcVMK1acK7SDLhuofGm2A8wqbigrQgwqvin4c9w7jhuKItw7fCpTojzqA3Pi4iLCIiLCIiXQ==" rel="nofollow noreferrer">Try it Online!</a></p>
 <p>Stuff Vyxal isn't meant to do! This took far too long. The <code>Ḣ</code> flag renders stdout as HTML.</p>
-<p>Also, <a href="https://vyxal.pythonanywhere.com/#WyJz4biiIiwiIiwiwrviiKjiiKnEiz3El8K7SDPhuofiiJ7Gm2A8cCDCq+Kfhz3DuOG4oi3Dt8KlOiPOoDvigoPhuYE6MD4uIiwiIiwiIl0=" rel="nofollow noreferrer">here</a>'s a bonus one.</p>
+<p>Also, <a href="https://vyxal.pythonanywhere.com/#WyJz4biiIiwiIiwiwrviiKjiiKnEiz3El8K7SDPhuofiiJ7Gm2A8wqbigrQgwqvin4c9w7jhuKItw7fCpTojzqA+LiIsIiIsIiJd" rel="nofollow noreferrer">here</a>'s a bonus one.</p>
 <p><a href="https://i.sstatic.net/78C7M.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/78C7M.png" alt="enter image description here" /></a></p>
 <pre><code>           ƛ     # Over each element of...
 »‡Ė\Tµi»         # A compressed integer
         H2ẇ      # Split into chunks of two...
-            `... # Compresssed string `&lt;p style=background-color:#Π7;margin:0&gt;.`
+            `... # Compresssed string `&lt;div style=background-color:#Π7&gt;.`
                  # The Π pops and inserts an item from the stack.
                  # (s flag) turn the result into something HTML understands
                  # (Ḣ flag) render the output as HTML
