--- a/q/157554.html
+++ b/q/157554.html
@@ -26,16 +26,23 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>341</td><td>Python3</td><td>240826T140517Z</td><td><a href="https://codegolf.stackexchange.com/questions/157554/cutpoints-in-a-maze/275162#275162">Ajax1234</a></td></tr>
-<tr d-ix="1"><td>407</td><td>Java 8</td><td>180308T110444Z</td><td><a href="https://codegolf.stackexchange.com/questions/157554/cutpoints-in-a-maze/157599#157599">Kevin Cr</a></td></tr>
-<tr d-ix="2"><td>122</td><td>Javascript</td><td>180309T104923Z</td><td><a href="https://codegolf.stackexchange.com/questions/157554/cutpoints-in-a-maze/157707#157707">edc65</a></td></tr>
-<tr d-ix="3"><td>089</td><td>Perl 5</td><td>180308T064443Z</td><td><a href="https://codegolf.stackexchange.com/questions/157554/cutpoints-in-a-maze/157586#157586">Ton Hosp</a></td></tr>
-<tr d-ix="4"><td>026</td><td>MATL</td><td>180307T230059Z</td><td><a href="https://codegolf.stackexchange.com/questions/157554/cutpoints-in-a-maze/157567#157567">Luis Men</a></td></tr>
-<tr d-ix="5"><td>040</td><td>Stax</td><td>180308T012942Z</td><td><a href="https://codegolf.stackexchange.com/questions/157554/cutpoints-in-a-maze/157573#157573">recursiv</a></td></tr>
-<tr d-ix="6"><td>118</td><td>Wolfram Language Mathematica</td><td>180308T072223Z</td><td><a href="https://codegolf.stackexchange.com/questions/157554/cutpoints-in-a-maze/157588#157588">alephalp</a></td></tr>
-<tr d-ix="7"><td>290</td><td>Python 2</td><td>180307T215230Z</td><td><a href="https://codegolf.stackexchange.com/questions/157554/cutpoints-in-a-maze/157561#157561">hyper-ne</a></td></tr>
+<tr d-ix="0"><td>033</td><td>Uiua</td><td>240828T112930Z</td><td><a href="https://codegolf.stackexchange.com/questions/157554/cutpoints-in-a-maze/275202#275202">nyxbird</a></td></tr>
+<tr d-ix="1"><td>341</td><td>Python3</td><td>240826T140517Z</td><td><a href="https://codegolf.stackexchange.com/questions/157554/cutpoints-in-a-maze/275162#275162">Ajax1234</a></td></tr>
+<tr d-ix="2"><td>407</td><td>Java 8</td><td>180308T110444Z</td><td><a href="https://codegolf.stackexchange.com/questions/157554/cutpoints-in-a-maze/157599#157599">Kevin Cr</a></td></tr>
+<tr d-ix="3"><td>122</td><td>Javascript</td><td>180309T104923Z</td><td><a href="https://codegolf.stackexchange.com/questions/157554/cutpoints-in-a-maze/157707#157707">edc65</a></td></tr>
+<tr d-ix="4"><td>089</td><td>Perl 5</td><td>180308T064443Z</td><td><a href="https://codegolf.stackexchange.com/questions/157554/cutpoints-in-a-maze/157586#157586">Ton Hosp</a></td></tr>
+<tr d-ix="5"><td>026</td><td>MATL</td><td>180307T230059Z</td><td><a href="https://codegolf.stackexchange.com/questions/157554/cutpoints-in-a-maze/157567#157567">Luis Men</a></td></tr>
+<tr d-ix="6"><td>040</td><td>Stax</td><td>180308T012942Z</td><td><a href="https://codegolf.stackexchange.com/questions/157554/cutpoints-in-a-maze/157573#157573">recursiv</a></td></tr>
+<tr d-ix="7"><td>118</td><td>Wolfram Language Mathematica</td><td>180308T072223Z</td><td><a href="https://codegolf.stackexchange.com/questions/157554/cutpoints-in-a-maze/157588#157588">alephalp</a></td></tr>
+<tr d-ix="8"><td>290</td><td>Python 2</td><td>180307T215230Z</td><td><a href="https://codegolf.stackexchange.com/questions/157554/cutpoints-in-a-maze/157561#157561">hyper-ne</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>Python3, 341 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://uiua.org" rel="nofollow noreferrer">Uiua</a>, 33 bytes</h1>
+<pre><code>↯:°⊚▽≠⍜⊂≡(⧻⊜π.⍜⬚∞⊡¬)⊙(,¤⟜⊚)⟜:⊂.⧻.
+</code></pre>
+<p><a href="https://www.uiua.org/pad?src=0_13_0-dev_1__W1sxIDAgMV0KIFsxIDAgMV0KIFswIDEgMV1dCgrihq86wrDiiprilr3iiaDijZziioLiiaEo4qe74oqcz4Au4o2c4qya4oie4oqhwqwp4oqZKCzCpOKfnOKKminin5w64oqCLuKnuy4K" rel="nofollow noreferrer">Try it!</a></p>
+<p>More test cases + explanation are a WIP.</p>
+</div>
+<div id="pu1" class="pu"><h1>Python3, 341 bytes</h1>
 <pre class="lang-py prettyprint-override"><code>E=enumerate
 def G(g):
  while g:
@@ -53,7 +60,7 @@ def f(b):
 </code></pre>
 <p><a href="https://tio.run/##5VTNjtowED7XT@FyWRtC5YFLBfIFacWt5125FgKRZI3YAEnYLkI8O/VvnESs@gC1BB7PfPPNeDyT46V@OxTTn8fyfn/maXF@T8t1naJtmuElyekM4T9vap/iXEv4lFRckHrGxTCXgkkqE1HLeT7m1/qm7dmhxJ/JBasCnwzeKl6SV60QBBJGE8ISsP9js42NTlokVhk5zzj5HL0kl9ErpZojn1UjLs5yfnKbiXM2cS4q3W@vw@pm88zIxuS54EIwG3FlElDSiMqIG4lwc1iSK9E5UpdraVTPmsAcL8mHO5ZUZfjjZlit484S2jy1YZ8WRAyXRI2vuxuV9DuHmWbku/lCfEpxkRwQLtP6XBZ4cTcZ1ofV5rAut6TSlN@8SYjh@/pIVFEnWNGYbab2dVqSX4ciTXD1ozruVU2efhdPlEqEKsAcDwYDBAAMGANkdvNDzC1wJr2MYEDWBE6j94BxGsNVwSr3tIbTLMtm@Rtat1nBklhMIzgvcBbmaCcx185CwDoLeogYlTVBu3bW4QiKtt0pWnaviPagYD0X6JGyXljoJcZ6qf/jcqHmk1jz3vrfFbY809A7zDV6eCXUFBqcyfWcfzijcm3PvDq4uGfzMxPIHLFvafBD4lzaGi2g0BiuwyFMmWe0iCjbCUF@b4DIZ@gny8@lb0FPylpxQjN5Agv2xXnQO6E8zpOF2/XKC3Ggu9MbyxNcmjmIHBC@DhBlXx7WonV3bUruqsGaa3sExBi@EeBxWAis7UwBuqm3ynMs9UeVZCR@doFSzlvHVU7pA9ikC5t8AZt2YVMDu/8F" rel="nofollow noreferrer">Try it online!</a></p>
 </div>
-<div id="pu1" class="pu"><h1>Java 8, <s>503</s> <s>489</s> <s>459</s> <s>455</s> 407 bytes</h1>
+<div id="pu2" class="pu"><h1>Java 8, <s>503</s> <s>489</s> <s>459</s> <s>455</s> 407 bytes</h1>
 
 <pre class="lang-java prettyprint-override"><code>int R,C,v[][];m-&gt;{int r[][]=new int[R=m.length][C=m[0].length],i=R*C,a=i(m),x,y,q;for(;i--&gt;0;m[y][x]=0,r[y][x]=i(m)!=a?1:0,m[y][x]=q)q=m[y=i/C][x=i%C];return r;}int i(int[][]m){int r=0,i=R*C,x,y;for(v=new int[R][C];i--&gt;0;)if(m[y=i/C][x=i%C]&gt;v[y][x]){d(m,x,y);r++;}return r;}void d(int[][]m,int c,int r){v[r][c]=1;for(int k=-3,x,y;k&lt;4;k+=2)if((x=c+k%2-k/2)&gt;=0&amp;x&lt;C&amp;(y=r+k/2)&gt;=0&amp;y&lt;R&amp;&amp;m[y][x]&gt;v[y][x])d(m,x,y);}
 </code></pre>
@@ -106,7 +113,7 @@ void d(int[][]m,int c,int r){
       d(m,x,y);}            //    Do a recursive call for this cell
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1>Javascript 122 bytes</h1>
+<div id="pu3" class="pu"><h1>Javascript 122 bytes</h1>
 <p>Input/output as a multiline string.</p>
 <pre class="lang-js prettyprint-override"><code>m=&gt;m.replace(/./g,(v,p,m,n=[...m],f=p=&gt;n[p]==1&amp;&amp;(n[p]=0,v=f(p-1)+f(p+1)+f(p-w)+f(p+w)-1?1:0,1))=&gt;(f(p),v),w=~m.search`\n`)
 </code></pre>
@@ -249,7 +256,7 @@ for(i = 0; test[2*i]; ++i)
 </div>
 </p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a>, <code>-p0</code> <s>105</s> <s>101</s> <s>96</s> <s>93</s> <s>90</s> 89 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a>, <code>-p0</code> <s>105</s> <s>101</s> <s>96</s> <s>93</s> <s>90</s> 89 bytes</h1>
 
 <p>Uses <code>b</code> instead of <code>1</code> in the input.</p>
 
@@ -357,7 +364,7 @@ That makes clear what happens in the following code fragment:</p>
 
 <p>The only problem is that in the non-walkable positions the old value is retained. Since we need <code>0</code>s there that means the original input array must have <code>0</code> in the non walkable positions and <code>0</code> matches <code>\w</code> in the original substitution and would trigger flood-fills. That's why I use <code>\pL</code> instead (only match letters).</p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/lmendo/MATL" rel="nofollow noreferrer">MATL</a>, 26 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://github.com/lmendo/MATL" rel="nofollow noreferrer">MATL</a>, 26 bytes</h1>
 <pre><code>n:&quot;GG0@(,w4&amp;1ZIuz]=~]vGZye
 </code></pre>
 <p>The input is a numerical matrix, using <code>;</code> as row separator.</p>
@@ -387,7 +394,7 @@ GZye        % Reshape (in column-major order) according to size of input matrix.
             % Implicit display
 </code></pre>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://github.com/tomtheisen/stax" rel="nofollow noreferrer">Stax</a>, 40 <a href="https://github.com/tomtheisen/stax/blob/master/docs/packed.md#packed-stax" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu6" class="pu"><h1><a href="https://github.com/tomtheisen/stax" rel="nofollow noreferrer">Stax</a>, 40 <a href="https://github.com/tomtheisen/stax/blob/master/docs/packed.md#packed-stax" rel="nofollow noreferrer">bytes</a></h1>
 
 <pre><code>Çóê↓â.Φ}╞│*w&lt;(♦◙¼ñ£º█¢,D`ì♥W4·☺╛gÇÜ♠╗4D┬
 </code></pre>
@@ -438,14 +445,14 @@ gu              generate values until any duplicate is encountered
 
 <p><a href="https://staxlang.xyz/#p=8124d11dcf6f6f00efaa77e1ac76c461606012a97a3bae4f55e4efce7d9d9683fe1aad5ae63003c59f5a6955&amp;i=11101001%0A11011101%0A00000001%0A11101111%0A11110101%0A00011111%0A10110001%0A11111111%0A%0A1111111111111111%0A1000000000000001%0A1111111111111101%0A0000000000000101%0A1111111111110101%0A1000000000010101%0A1011111111010101%0A1010000001010101%0A1010111101010101%0A1010101111010101%0A1010100000010101%0A1010111111110101%0A1010000000000101%0A1011111111111101%0A1000000000000001%0A1111111111111111%0A%0A1011010001111010%0A1111111011101101%0A1110010101001011%0A1111001110010010%0A1111010000101001%0A0111101001000101%0A0011100111110010%0A1001110011111110%0A0101000011100011%0A1110110101001110%0A0010100111000110%0A1000110111011010%0A0100101000100101%0A0001010101100011%0A1001010000111101%0A1000111011000010&amp;a=1&amp;m=1" rel="nofollow noreferrer">Bonus 44 byte program</a> - this version inputs and outputs using the grid format.</p>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 118 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 118 bytes</h1>
 
 <pre><code>(r=ReplacePart)[0#,Cases[#~Position~1,p_/;(c=Max@MorphologicalComponents[#,CornerNeighbors-&gt;1&lt;0]&amp;)@r[#,p-&gt;0]&gt;c@#]-&gt;1]&amp;
 </code></pre>
 
 <p><a href="https://tio.run/##bY3BCoMwEER/RRBEIdJ4bpWAZ4v0KqGkEjWg2RBzKIj@eqoUaSzCsgwz@2YHZjo@MCNqZhsvtaFOH1z1rOYl0yaqsI9yNvKx8pcSRmEEyCVB6nm5hnVasDcpQKsOemjXhj6HQYHk0qz3KActub5z0XYv0GOcJTdMg4joNVNxhmlWE5@uNg1sqYU0pCHTlCDvO3jfm5iRN7n2T28J3u/ccZg/7Ji4r45tyQmDHebsz5GZ7Qc" rel="nofollow noreferrer" title="Wolfram Language (Mathematica) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://docs.python.org/2/" rel="nofollow noreferrer">Python 2</a>, 290 bytes</h1>
+<div id="pu8" class="pu"><h1><a href="https://docs.python.org/2/" rel="nofollow noreferrer">Python 2</a>, 290 bytes</h1>
 
 
 
