--- a/q/275165.html
+++ b/q/275165.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>157</td><td>C clang</td><td>240828T135743Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275205#275205">jdt</a></td></tr>
+<tr d-ix="0"><td>131</td><td>C clang</td><td>240828T135743Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275205#275205">jdt</a></td></tr>
 <tr d-ix="1"><td>009</td><td>Japt</td><td>240827T064722Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275182#275182">Shaggy</a></td></tr>
 <tr d-ix="2"><td>066</td><td>R</td><td>240827T191400Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275194#275194">David Jo</a></td></tr>
 <tr d-ix="3"><td>049</td><td>Ruby</td><td>240827T170409Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275190#275190">Jordan</a></td></tr>
@@ -42,11 +42,11 @@
 <tr d-ix="13"><td>018</td><td>Charcoal</td><td>240826T210607Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275168#275168">Neil</a></td></tr>
 <tr d-ix="14"><td>023</td><td>Jelly</td><td>240826T191846Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275166#275166">hyper-ne</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="http://clang.llvm.org/" rel="nofollow noreferrer">C (clang)</a>, 157 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="http://clang.llvm.org/" rel="nofollow noreferrer">C (clang)</a>, 131 bytes</h1>
 
-<pre class="lang-c prettyprint-override"><code>w[2],*t,i,j;f(**s,n){int p[99]={n-1};for(i=j=0;i&lt;n;i++){*w=i*8+j;i-j&amp;&amp;!wcsstr(p,w)&amp;&amp;(wcscat(p,w),j=i,i=-1);}for(t=p;*t;)printf(&quot;%s %s\n&quot;,s[*t%8],s[*t++/8]);}
+<pre class="lang-c prettyprint-override"><code>w[2],i,j;f(**s,n){int p[99]={n-1};for(i=j=0;i&lt;n;i++){*w=i*8+j;wcsstr(p,w)||i-j&amp;&amp;(wcscat(p,w),printf(&quot;%s %s\n&quot;,s[j],s[j=i]),i=-1);}}
 </code></pre>
-<p><a href="https://tio.run/##bY5NbsMgEIX3OQVFigUYKzErR5RF/07hekGpnWK5xDKklmr56nUBN4u0ZTFPb5g386lMddIcl2UsWUWJo5q2vEGEWGrwpI0DfXk4VGIyWT7z5jQgLVqx5/rWcJ2meCKj0KRIW66zNkluRmWtG1BPR5wkyDslXXS0FZpqkeWYz2GNEz0njuN@8EcaBLcWbO2zgdSWxG2LKmqa7orKB5YA8i61QRhMG@BfLL5LgKuty8sKCDABeNdpVUMK4P3pJcjDmxw6HTuP8iPqkxcw88sCYPVnnft00FOD4joMdhdP1sY6//NN1xDmK0Z/dhZB6GeuqdiFSoa7kUeF8hpKZGn@kLBrEvabhF2RsJWE/UMS/VC782DAnm/mzfKlmk4e7ZKN3w" rel="nofollow noreferrer" title="C (clang) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##bY7LbsMgEEX3@QqElAhsrMasGlEWfX2F6wUldjqWSyxDaqmOf70u4GaRtizu1VzmcXSmW2UO8zwUvGTAGlGTJLHM0BGMQ12x25VyNFk@ifrYE5CN3Aq4MwLSlI7JICG5TRsxaGtdTzo20PMZsmazIT7SysWIdb1fVhO8tmhtXwxmtmjKIBJKykBmORXTNIeL7woMoWhcIf@i@DRBrrIuL0ok0YjwfQu6wgzhh@NrsMc31bcQkyf1Ef3ZG5rEZQGy8Fnlfjr4sSZxHUU3lzpZgqX/55stQ1QsGN3JWYKx77mm4hcqFe5GHh1kHySy1H9I@DUJ/03Cr0j4QsL/IYl1X7lTb9BWrKbV/KXrVh3snA3f" rel="nofollow noreferrer" title="C (clang) – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, <s>11</s> 9 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>à2 c
