--- a/q/151276.html
+++ b/q/151276.html
@@ -26,9 +26,9 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>003</td><td>Japt h</td><td>171220T140948Z</td><td><a href="https://codegolf.stackexchange.com/questions/151276/find-the-longest-word-in-an-array/151309#151309">Shaggy</a></td></tr>
-<tr d-ix="1"><td>006</td><td>Uiua</td><td>231117T222201Z</td><td><a href="https://codegolf.stackexchange.com/questions/151276/find-the-longest-word-in-an-array/266861#266861">chunes</a></td></tr>
-<tr d-ix="2"><td>028</td><td>Zsh</td><td>240817T113257Z</td><td><a href="https://codegolf.stackexchange.com/questions/151276/find-the-longest-word-in-an-array/275027#275027">roblogic</a></td></tr>
+<tr d-ix="0"><td>026</td><td>Zsh</td><td>240817T113257Z</td><td><a href="https://codegolf.stackexchange.com/questions/151276/find-the-longest-word-in-an-array/275027#275027">roblogic</a></td></tr>
+<tr d-ix="1"><td>003</td><td>Japt h</td><td>171220T140948Z</td><td><a href="https://codegolf.stackexchange.com/questions/151276/find-the-longest-word-in-an-array/151309#151309">Shaggy</a></td></tr>
+<tr d-ix="2"><td>006</td><td>Uiua</td><td>231117T222201Z</td><td><a href="https://codegolf.stackexchange.com/questions/151276/find-the-longest-word-in-an-array/266861#266861">chunes</a></td></tr>
 <tr d-ix="3"><td>033</td><td>Noulith</td><td>231118T012553Z</td><td><a href="https://codegolf.stackexchange.com/questions/151276/find-the-longest-word-in-an-array/266865#266865">bigyihsu</a></td></tr>
 <tr d-ix="4"><td>002</td><td>Thunno 2</td><td>230616T171318Z</td><td><a href="https://codegolf.stackexchange.com/questions/151276/find-the-longest-word-in-an-array/261935#261935">The Thon</a></td></tr>
 <tr d-ix="5"><td>007</td><td>Factor</td><td>221013T030326Z</td><td><a href="https://codegolf.stackexchange.com/questions/151276/find-the-longest-word-in-an-array/253128#253128">chunes</a></td></tr>
@@ -94,7 +94,18 @@
 <tr d-ix="65"><td>nan</td><td>C#</td><td>171220T102105Z</td><td><a href="https://codegolf.stackexchange.com/questions/151276/find-the-longest-word-in-an-array/151278#151278">LiefdeWe</a></td></tr>
 <tr d-ix="66"><td>054</td><td>Swift</td><td>171220T105606Z</td><td><a href="https://codegolf.stackexchange.com/questions/151276/find-the-longest-word-in-an-array/151285#151285">Endenite</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>Japt <code>-h</code>, <s>5</s> 3 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a>, <sub><s>28</s></sub> 26 bytes</h1>
+
+<pre class="lang-sh prettyprint-override"><code>for i;&lt;&lt;&lt;$i&gt;$i;ls -S|sed q
+</code></pre>
+<p><a href="https://tio.run/##qyrO@P8/Lb9IIdPaxsZGJdNOJdM6p1hBN7imODVFofD///8lmXmV/4tzE3Ny/idlpqenFkGo4hIA" rel="nofollow noreferrer">Try it online!</a>
+<sub><s><a href="https://tio.run/##qyrO@P8/Lb9IIdPaxsZGJdNOJdM6p1hBN7gmIzUxRUHX8P///yWZeZX/i3MTc3L@J2Wmp6cWQajiEgA" rel="nofollow noreferrer" title="Zsh – Try It Online">28b</a></s></sub></p>
+<p>Write each argument (<code>&lt;&lt;&lt;$i</code>) to a file also named (<code>&gt;$i</code>). List directory (<code>ls -S</code>) sorted by size. Take the top result.</p>
+<p>A direct port of the <a href="https://codegolf.stackexchange.com/a/151452/15940">bash solution</a> is <a href="https://tio.run/##qyrO@P8/Lb9IIclaQ0NFOclORTlRU1NNLdFWJcnaxsZGJfH///8lmXmV/5My09NTiyBUccn/4tzEnBwA" rel="nofollow noreferrer">29 bytes</a>:</p>
+<pre class="lang-sh prettyprint-override"><code>for b;(($#b&gt;$#a))&amp;&amp;a=$b;&lt;&lt;&lt;$a
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1>Japt <code>-h</code>, <s>5</s> 3 bytes</h1>
 <pre><code>ÔñÊ
 </code></pre>
 <p><a href="https://ethproductions.github.io/japt/?v=1.4.6&amp;code=1PHK&amp;input=WyJlZHVyIiwib290IiwidGFodCJdCi1o" rel="nofollow noreferrer">Try it</a></p>
@@ -106,7 +117,7 @@
 <p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;flags=LWc&amp;code=/MrM&amp;input=WyJvbmUiLCAidHdvIiwgIm5vIl0" rel="nofollow noreferrer">Try it</a></p>
 <p>Sort &amp; group by length, get the last element and output the first element.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://uiua.org" rel="nofollow noreferrer">Uiua</a>, 6 <a href="https://codegolf.stackexchange.com/a/265917/97916">bytes</a></h1>
+<div id="pu2" class="pu"><h1><a href="https://uiua.org" rel="nofollow noreferrer">Uiua</a>, 6 <a href="https://codegolf.stackexchange.com/a/265917/97916">bytes</a></h1>
 <pre><code>⊡⊢⍖⍚⧻.
 </code></pre>
 <p><a href="https://uiua.org/pad?src=0_13_0-dev_1__ZiDihpAg4oqh4oqi4o2W4o2a4qe7LgoKZiB7ImEiICJiY2R6IiAiYWIiICJlZmcifQpmIHsib25lIiAidHdvIiAibm8ifQpmIHsidHdvIiAib25lIiAibm8ifQo=" rel="nofollow noreferrer">Try it!</a></p>
@@ -115,16 +126,6 @@
    ⍚⧻   # lengths
  ⊢⍖     # index of maximum
 ⊡       # pick
-</code></pre>
-</div>
-<div id="pu2" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a>, 28 bytes</h1>
-
-<pre class="lang-sh prettyprint-override"><code>for i;&lt;&lt;&lt;$i&gt;$i;ls -S|head -1
-</code></pre>
-<p><a href="https://tio.run/##qyrO@P8/Lb9IIdPaxsZGJdNOJdM6p1hBN7gmIzUxRUHX8P///yWZeZX/i3MTc3L@J2Wmp6cWQajiEgA" rel="nofollow noreferrer" title="Zsh – Try It Online">Try it online!</a></p>
-<p>Write each argument (<code>&lt;&lt;&lt;$i</code>) to a file also named (<code>&gt;$i</code>). List directory (<code>ls -S</code>) sorted by size. Take the top result.</p>
-<p>This is one byte shorter than a direct port of the <a href="https://codegolf.stackexchange.com/a/151452/15940">bash solution</a>; (<a href="https://tio.run/##qyrO@P8/Lb9IIclaQ0NFOclORTlRU1NNLdFWJcnaxsZGJfH///8lmXmV/5My09NTiyBUccn/4tzEnBwA" rel="nofollow noreferrer">29 bytes</a>)</p>
-<pre class="lang-sh prettyprint-override"><code>for b;(($#b&gt;$#a))&amp;&amp;a=$b;&lt;&lt;&lt;$a
 </code></pre>
 </div>
 <div id="pu3" class="pu"><h1><a href="https://github.com/betaveros/noulith" rel="nofollow noreferrer">Noulith</a>, 33 bytes</h1>
