--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240828T164719Z
+"   /golfscore                                      20240828T170838Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/267346.html">Night hike partitioning                         : 0267346</a>
 <a href="q/275165.html">Completely introduce your friends               : 0275165</a>
 <a href="q/69.html">Golf you a quine for great good!                : 0000069</a>
 <a href="q/151276.html">Find the longest word in an array               : 0151276</a>
