--- a/q/275165.html
+++ b/q/275165.html
@@ -51,11 +51,11 @@
 <pre class="lang-c prettyprint-override"><code>void func(char **s, int n, char *out) {
     int i = 0;
     int j = n - 1;
-    char *pair = NULL;
+    char pair[80];
     *out = 0;
     for (; i &lt; n; ) {
         if (i != j) {
-            asprintf(&amp;pair, &quot;%s %s\n&quot;, s[j], s[i]);
+            sprintf(pair, &quot;%s %s\n&quot;, s[j], s[i]);
             if (!strstr(out, pair)) {
                 strcat(out, pair);
                 j = i;
